Version 6.9.0
- Added new optimization to merge duplicate functions (only at -O2, and so far only works for small functions)
- Fixed some nucode compilation problems with the C test suite

Version 6.8.1
- Fixed using new keywords like `bytes` in parameters with default values

Version 6.8.0
- Added support for `%"xyzw"` constants in Spin2
- Added locking for host file system I/O
- Added `--compress` flag to compress binaries (courtesy of Ada)
- Fixed incorrect inline assembly for `#outb` and other hw registers
- Made `@foo.bar` work when `bar` is a label
- Supported PNut v43 `{Spin2_vNN}` version comments

Version 6.7.2
- Added putchar to libc.a
- Added another optimization for more AND x, #255 cases.

Version 6.7.1
- Added a memory read optimization in -O2, courtesy of Ada
- Added a peephole optimization for WRBYTE x,y after AND x,#255
- Fixed a problem in DEBUG() printing functions with multiple return values
- Fixed some 32/64 bit confusion in Spin comparison operators

Version 6.7.0
- Added new Spin2 lstring/bytes/words/longs keywords
- Added versioning for Spin2 language files, controlled by {$ver NN} or {vNN}
- Fixed potential bug in shl/shr peephole optimization
- Made SEND() work in the various bytecode interpreters
- More forceful warning for return without a declared result in Spin2
- Optimized 16 bit multiplications more often

Version 6.6.2
- Added warning (-Warray-index) for constant array indices out of bounds
- Allow warnings and optimizations to be turned off with a `no-` prefix (so `warn(no-init-vars)` is like `warn(!init-vars)`).
- Added some peephole optimizations to remove unnecessary sign extension
- Added peephole optimizations for sequences of shifts/adds/subs
- Parse --optimize= flag (spin2cpp) in a slightly more flexible way
- Some internal changes to make recovering from missing xxd easier

Version 6.6.1
- Changed type of `dat` array in C++ output to `unsigned char`
- Fixed function type usage in -2nu for some Spin method pointers